--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     def room_version = "2.3.0"
 
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
